# wrk-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/bench/: Cargo.toml
crates/bench/benches/: throughput.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  output.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  connection.rs  lib.rs  thread.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  request.rs  response.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: hooks.rs  lib.rs  table.rs
crates/stats/: Cargo.toml
crates/stats/src/: aggregate.rs  histogram.rs  lib.rs
docs/superpowers/plans/: 2026-06-08-wrk-rs-release-ci-bench.md
docs/superpowers/specs/: 2026-06-08-wrk-rs-release-ci-bench-design.md
