[package]
name = "bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "throughput"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wrk-engine = { path = "../engine" }
wrk-stats = { path = "../stats" }
tokio = { version = "1", features = ["full"] }
